--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 #home,
 #project,
-#contact {
+#skills {
     background: rgb(190, 190, 190);
 }
 
@@ -251,10 +251,6 @@ form h2 {
     justify-content: space-around;
     align-items: center;
     text-align: center;
-}
-
-footer {
-    padding-top: 8px;
 }
 
 @keyframes status {
