--- a/style.css
+++ b/style.css
@@ -144,8 +144,16 @@
     margin-left: auto;
     margin-right: auto;
     border-radius: 16px;
-    height: 40vh;
+    height: 38vh;
     align-items: center;
+    transition: ease-in-out 0.2s;
+    border: 2px solid black;
+}
+
+.about_img:hover {
+    transition: ease-in-out 0.2s;
+    transform: scale(0.8);
+    border: 12px solid black;
 }
 
 .social a {
