--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:400,700');
-@import url('https://fonts.googleapis.com/css2?family=Golos+Text&family=PT+Serif:ital@0;1&display=swap');
+/* ********** Import ********** */
+
+@import url("https://fonts.googleapis.com/css?family=Quicksand:400,700");
+@import url("https://fonts.googleapis.com/css2?family=Golos+Text&family=PT+Serif:ital@0;1&display=swap");
+
+/* ********** Combine / Main ********** */
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Quicksand', serif;
+    font-family: "Quicksand", serif;
 }
 
 #home,
@@ -13,15 +17,17 @@
     background: rgb(190, 190, 190);
 }
 
+/* ********** Navbar ********** */
+
+
+
+/* ********** Home ********** */
+
 .content {
     padding-top: 36vh;
     padding-bottom: 36vh;
     text-align: center;
     text-decoration: none;
-}
-
-.content h3 {
-    text-align: center;
 }
 
 .content button {
@@ -39,7 +45,7 @@
     border: 1px solid red;
     font-size: 1rem;
     /* font-family: 'Golos Text', sans-serif; */
-    font-family: 'PT Serif', serif;
+    font-family: "PT Serif", serif;
     text-decoration: none;
 }
 
@@ -49,6 +55,31 @@
     color: white;
     transition: ease-in-out 0.2s;
 }
+
+/* ********** About ********** */
+
+.about_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 16px;
+    height: 38vh;
+    align-items: center;
+    transition: ease-in-out 0.2s;
+    border: 2px solid black;
+}
+
+.about_img:hover {
+    transition: ease-in-out 0.2s;
+    transform: scale(0.8);
+    border: 12px solid black;
+}
+
+.social a {
+    padding: 0px 6px;
+}
+
+/* ********** Project ********** */
 
 .main {
     color: #272727;
@@ -139,40 +170,29 @@
     font-weight: 400;
 }
 
-.about_img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 16px;
-    height: 38vh;
-    align-items: center;
-    transition: ease-in-out 0.2s;
-    border: 2px solid black;
-}
+/* ********** Skills ********** */
 
-.about_img:hover {
-    transition: ease-in-out 0.2s;
-    transform: scale(0.8);
-    border: 12px solid black;
-}
-
-.social a {
-    padding: 0px 6px;
-}
-
-#conatct {
-    height: 100vh;
+.layout {
     width: 100%;
-    background-color: aliceblue;
+
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    gap: 16px;
 }
+
+.grow1 {
+    flex-grow: 1;
+    text-align: center;
+}
+
+.grow1 span {
+    width: 180px;
+}
+
+/* ********** Contact ********** */
 
 .feedback {
     width: 90%;
-    max-width: 500px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     box-shadow: 0px 0px 40px #00000010;
@@ -180,6 +200,17 @@
     border-radius: 8px;
     margin-bottom: 20px;
     border: 1px solid black;
+}
+
+form h2 {
+    /* font-family: "Quicksand", serif; */
+    color: black;
+    font-weight: 800;
+    margin-bottom: 20px;
+    padding: 16px 0px;
+    padding-bottom: 36px;
+    text-decoration: underline;
+    text-align: center;
 }
 
 .form-group {
@@ -193,7 +224,7 @@
     width: 100%;
     padding: 5px;
     font-size: 18px;
-    border: 1px solid rgba(128, 128, 128, 0.199);
+    border: 2px solid rgba(128, 128, 128, 0.199);
     margin-top: 5px;
 }
 
@@ -241,25 +272,11 @@ button[type="submit"]:hover {
     animation: status 4s ease forwards;
 }
 
-form h2 {
-    color: black;
-    font-weight: 800;
-    margin-bottom: 20px;
-    padding: 4px 0px;
-    text-decoration: underline;
-}
+/* ********** Footer ********** */
 
-.icons i {
-    font-size: 120px;
-    height: 200px;
-}
 
-.skills {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-}
+
+/* ********** Media Queries / Keyframe ********** */
 
 @keyframes status {
     0% {
@@ -287,5 +304,39 @@ form h2 {
 @media (min-width: 56rem) {
     .cards_item {
         width: 33.3333%;
+    }
+}
+
+@media (max-width: 850px) {
+    .layout {
+        display: inline-block;
+        width: 100%;
+        gap: 16px;
+        text-align: center;
+    }
+
+    .grow1 {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        gap: 16px;
+        flex-grow: 1;
+    }
+
+    .grow1 span {
+        width: 180px;
+    }
+}
+
+@media (max-width: 600px) {
+    .grow2 {
+        display: inline-block;
+        width: 100%;
+        gap: 16px;
+        text-align: center;
+    }
+
+    form h2 {
+        text-align: left;
     }
 }
